compiler/tests/golden/errors/type_mismatch_basic.txt
error: type mismatch: expected `Drug` (chebi:drug), found `Process` (go:biological_process): no alignment found between chebi:drug and go:biological_process (different ontologies require explicit align declaration)
  --> /tmp/demetrios_test_XXXX/type_mismatch.dm:12:15
   |
 12 |     need_drug(p);
   |                ^

Error:   × Type errors:
  │ type mismatch: expected `Drug` (chebi:drug), found `Process`
  │ (go:biological_process): no alignment found between chebi:drug and
  │ go:biological_process (different ontologies require explicit align
  │ declaration)